Fixed card spacing issues on edit2

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -15,6 +15,10 @@
 .side-margin {
   margin: 0 30px;
 }
+.side-margin-small {
+  margin: 0 15px;
+}
+
 // Backgrounds
 .bg-black {
   background: #4a4a4a;
